--- a/index.html
+++ b/index.html
@@ -10,5 +10,112 @@
 
     <script src="js/main.js"></script>
   </head>
-  <body></body>
+  <body>
+    <!-- position on top -->
+    <div class="hdrWrap">
+      <header>
+        <h1 class="logo"><img src="#" alt="home / logo" />My Site</h1>
+      </header>
+    </div>
+
+    <!-- position on left -->
+    <div class="menuWrap">
+      <div class="menu">
+        <h2><a href="#">about</a></h2>
+        <h2><a href="#">portfolio</a></h2>
+        <h2><a href="#">contact</a></h2>
+      </div>
+    </div>
+
+    <!-- position on right -->
+    <!-- 0. introduction -->
+    <div class="container">
+      <div class="sectionIntro">
+        <header>
+          <h3>
+            hi, my name is...<br />
+            I want to be frontend web developer
+          </h3>
+        </header>
+        <section>
+          <img src="#" alt="profile pic" />
+          <div class="texts">
+            <h5>Intro Title</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non
+              mollitia repudiandae voluptates vitae, ut commodi suscipit tempore
+              ad tenetur cum, rerum itaque illum qui modi a sit molestias amet
+              nobis!
+            </p>
+          </div>
+        </section>
+        <!-- 1. skills and levels -->
+        <header>
+          <h3>here are my skills and levels</h3>
+        </header>
+        <section>
+          <h4>A. design tools</h4>
+          <ul class="design">
+            <li class="tool">1. photoshop</li>
+            <li class="tool">2. illustrator</li>
+            <li class="tool">3. figma</li>
+            <li class="tool">4. adobe xd</li>
+          </ul>
+          <h4>B. coding</h4>
+          <ul class="coding">
+            <li>html</li>
+            <li>css</li>
+            <li>sass/scss</li>
+            <li>javascript es6</li>
+            <li>jQuery</li>
+            <li>react js</li>
+            <li>ajax/json</li>
+          </ul>
+        </section>
+        <!-- 2. portfolio gallery & links -->
+        <header>
+          <h3>here are some of my works</h3>
+        </header>
+        <section>
+          <div class="filterBtn"></div>
+          <div class="gallery">
+            <article>
+              <div class="image"></div>
+              <div class="texts"></div>
+            </article>
+            <article>
+              <div class="image"></div>
+              <div class="texts"></div>
+            </article>
+            <article>
+              <div class="image"></div>
+              <div class="texts"></div>
+            </article>
+            <article>
+              <div class="image"></div>
+              <div class="texts"></div>
+            </article>
+            <article>
+              <div class="image"></div>
+              <div class="texts"></div>
+            </article>
+            <article>
+              <div class="image"></div>
+              <div class="texts"></div>
+            </article>
+          </div>
+        </section>
+        <!-- 3. contact -->
+        <header>
+          <h3>you can reach out to me!</h3>
+        </header>
+        <section>
+          <button class="cyan">resume.pdf</button>
+          <button class="magenta">Email: abcd@gmail.com</button>
+          <button class="yellow">Phone: 010-1234-1234</button>
+          <p>thank you!</p>
+        </section>
+      </div>
+    </div>
+  </body>
 </html>
