--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <!-- position on top -->
     <div class="hdrWrap">
       <header>
-        <h1 class="logo"><img src="#" alt="home / logo" />My Site</h1>
+        <h1 class="logo"><img src="#" alt="home" /></h1>
+        <div class="emptyBox"></div>
       </header>
     </div>
 
@@ -24,6 +25,9 @@
         <h2><a href="#">about</a></h2>
         <h2><a href="#">portfolio</a></h2>
         <h2><a href="#">contact</a></h2>
+      </div>
+      <div class="footer">
+        <p>&copy; Copyright 2022. All Rights Reserved.</p>
       </div>
     </div>
 
@@ -49,7 +53,10 @@
             </p>
           </div>
         </section>
-        <!-- 1. skills and levels -->
+      </div>
+
+      <!-- 1. skills and levels -->
+      <!-- <div class="sectionSkills">
         <header>
           <h3>here are my skills and levels</h3>
         </header>
@@ -72,7 +79,10 @@
             <li>ajax/json</li>
           </ul>
         </section>
-        <!-- 2. portfolio gallery & links -->
+      </div> -->
+
+      <!-- 2. portfolio gallery & links -->
+      <!-- <div class="sectionPortfolio">
         <header>
           <h3>here are some of my works</h3>
         </header>
@@ -105,7 +115,10 @@
             </article>
           </div>
         </section>
-        <!-- 3. contact -->
+      </div> -->
+
+      <!-- 3. contact -->
+      <!-- <div class="sectionContact">
         <header>
           <h3>you can reach out to me!</h3>
         </header>
@@ -115,7 +128,7 @@
           <button class="yellow">Phone: 010-1234-1234</button>
           <p>thank you!</p>
         </section>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
