--- a/index.html
+++ b/index.html
@@ -14,17 +14,23 @@
     <!-- position on top -->
     <div class="hdrWrap">
       <header>
-        <h1 class="logo"><img src="#" alt="home" /></h1>
+        <h1 class="logo">
+          <a href="#">
+            <img src="#" alt="home" />
+          </a>
+        </h1>
         <div class="emptyBox"></div>
       </header>
     </div>
 
     <!-- position on left -->
     <div class="menuWrap">
+      <!-- <div class="menuBG" id="right"></div>
+      <div class="menuBG" id="left"></div> -->
       <div class="menu">
-        <h2><a href="#">about</a></h2>
-        <h2><a href="#">portfolio</a></h2>
-        <h2><a href="#">contact</a></h2>
+        <h2><a href="#" id="menu1">about</a></h2>
+        <h2><a href="#" id="menu2">portfolio</a></h2>
+        <h2><a href="#" id="menu3">contact</a></h2>
       </div>
       <div class="footer">
         <p>&copy; Copyright 2022. All Rights Reserved.</p>
@@ -34,17 +40,20 @@
     <!-- position on right -->
     <!-- 0. introduction -->
     <div class="container">
+      <div class="mainSection">
+        <img src="https://via.placeholder.com/1030" alt="profile pic" />
+      </div>
       <div class="sectionIntro">
         <header>
           <h3>
-            hi, my name is...<br />
-            I want to be frontend web developer
+            Hi, my name is Min Young Park.<br />
+            I want to be a frontend web developer.
           </h3>
         </header>
         <section>
-          <img src="#" alt="profile pic" />
+          <img src="https://via.placeholder.com/500" alt="profile pic" />
           <div class="texts">
-            <h5>Intro Title</h5>
+            <h5>Introduction</h5>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non
               mollitia repudiandae voluptates vitae, ut commodi suscipit tempore
