--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
       <header>
         <h1 class="logo">
           <a href="#">
-            <img src="#" alt="home" />
+            home
           </a>
         </h1>
-        <div class="emptyBox"></div>
+        <!-- <div class="emptyBox"></div> -->
       </header>
     </div>
 
     <!-- position on left -->
     <div class="menuWrap">
-      <!-- <div class="menuBG" id="right"></div>
-      <div class="menuBG" id="left"></div> -->
+      <div class="menuBG" id="right"></div>
+      <div class="menuBG" id="left"></div>
       <div class="menu">
         <h2><a href="#" id="menu1">about</a></h2>
         <h2><a href="#" id="menu2">portfolio</a></h2>
@@ -40,13 +40,13 @@
     <!-- position on right -->
     <!-- 0. introduction -->
     <div class="container">
-      <div class="mainSection">
-        <img src="https://via.placeholder.com/1030" alt="profile pic" />
+      <div class="sectionMain">
+        <img src="https://via.placeholder.com/1130" alt="profile pic" />
       </div>
       <div class="sectionIntro">
         <header>
           <h3>
-            Hi, my name is Min Young Park.<br />
+            Hi, I'm Min Young Park.<br />
             I want to be a frontend web developer.
           </h3>
         </header>
@@ -55,43 +55,46 @@
           <div class="texts">
             <h5>Introduction</h5>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non
-              mollitia repudiandae voluptates vitae, ut commodi suscipit tempore
-              ad tenetur cum, rerum itaque illum qui modi a sit molestias amet
-              nobis!
+              Choosing the right career has been difficult for me.
+              After narrowing down my choices to computer related jobs,
+              I decided to take FrontEnd Web Developer training program.
+              Though hard, I was able to learn a lot about coding websites.
+              There is still a long way for me to go on improving my skills.
+              I want to use my abilities to contribute to the company I work in.
+              Please check out my works, and contact me! Thank you.
             </p>
           </div>
         </section>
       </div>
 
       <!-- 1. skills and levels -->
-      <!-- <div class="sectionSkills">
+      <div class="sectionSkills">
         <header>
-          <h3>here are my skills and levels</h3>
+          <h3>list of my skills</h3>
         </header>
         <section>
-          <h4>A. design tools</h4>
+          <h5>A. design tools</h4>
           <ul class="design">
-            <li class="tool">1. photoshop</li>
-            <li class="tool">2. illustrator</li>
-            <li class="tool">3. figma</li>
-            <li class="tool">4. adobe xd</li>
+            <li class="tool"><img src="img/tool1.jpg" alt="photoshop"></li>
+            <li class="tool"><img src="img/tool2.jpg" alt="illustrator"></li>
+            <li class="tool"><img src="img/tool3.jpg" alt="figma"></li>
+            <li class="tool"><img src="img/tool4.jpg" alt="adobe xd"></li>
           </ul>
-          <h4>B. coding</h4>
+          <h5>B. coding</h4>
           <ul class="coding">
-            <li>html</li>
-            <li>css</li>
-            <li>sass/scss</li>
-            <li>javascript es6</li>
-            <li>jQuery</li>
-            <li>react js</li>
-            <li>ajax/json</li>
+            <li><img src="img/coding1.jpg" alt="html"></li>
+            <li><img src="img/coding2.jpg" alt="css"></li>
+            <li><img src="img/coding3.jpg" alt="sass/scss"></li>
+            <li><img src="img/coding4.jpg" alt="jQuery"></li>
+            <li><img src="img/coding5.jpg" alt="javascript"></li>
+            <li><img src="img/coding6.jpg" alt="react js"></li>
+            <li><img src="img/coding7.jpg" alt="ajax/json"></li>
           </ul>
         </section>
-      </div> -->
+      </div>
 
       <!-- 2. portfolio gallery & links -->
-      <!-- <div class="sectionPortfolio">
+      <div class="sectionPortfolio">
         <header>
           <h3>here are some of my works</h3>
         </header>
@@ -124,7 +127,7 @@
             </article>
           </div>
         </section>
-      </div> -->
+      </div>
 
       <!-- 3. contact -->
       <!-- <div class="sectionContact">
