--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
               Choosing the right career has been difficult for me.
               After narrowing down my choices to computer related jobs,
               I decided to take FrontEnd Web Developer training program.
-              Though hard, I was able to learn a lot about coding websites.
-              There is still a long way for me to go on improving my skills.
+              Though hard, I was able to learn a lot on how to code a website.
+              There is still a long way for me to go to become a professional.
+              There's a saying that the start accomplishes half of the progress.
               I want to use my abilities to contribute to the company I work in.
               Please check out my works, and contact me! Thank you.
             </p>
