--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Min's Portfolio</title>
-
+    <link rel="icon shortcut" href="img/icon.png">
     <link rel="stylesheet" href="css/main.css" />
-
     <script src="js/main.js"></script>
   </head>
   <body>
@@ -40,10 +39,11 @@
     <!-- position on right -->
     <!-- 0. introduction -->
     <div class="container">
-      <div class="sectionMain">
+      <div class="allSection sectionMain">
         <img src="https://via.placeholder.com/1130" alt="profile pic" />
       </div>
-      <div class="sectionIntro">
+
+      <div class="allSection sectionIntro">
         <header>
           <h3>
             Hi, I'm Min Young Park.<br />
@@ -53,15 +53,17 @@
         <section>
           <img src="https://via.placeholder.com/500" alt="profile pic" />
           <div class="texts">
-            <h5>Introduction</h5>
+            <h4>Introduction</h4>
             <p>
               Choosing the right career has been difficult for me.
               After narrowing down my choices to computer related jobs,
-              I decided to take FrontEnd Web Developer training program.
+              I decided to participate in a Front End Web Developer training program.
               Though hard, I was able to learn a lot on how to code a website.
+            </p>
+            <p>
               There is still a long way for me to go to become a professional.
-              There's a saying that the start accomplishes half of the progress.
-              I want to use my abilities to contribute to the company I work in.
+              But there's the saying "A good beginning is half the battle."
+              I want start using my abilities to contribute to the company I work in.
               Please check out my works, and contact me! Thank you.
             </p>
           </div>
@@ -69,19 +71,19 @@
       </div>
 
       <!-- 1. skills and levels -->
-      <div class="sectionSkills">
+      <div class="allSection sectionSkills">
         <header>
-          <h3>list of my skills</h3>
+          <h4>List of my skills</h4>
         </header>
         <section>
-          <h5>A. design tools</h4>
+          <h5>• Design tools</h5>
           <ul class="design">
             <li class="tool"><img src="img/tool1.jpg" alt="photoshop"></li>
             <li class="tool"><img src="img/tool2.jpg" alt="illustrator"></li>
             <li class="tool"><img src="img/tool3.jpg" alt="figma"></li>
             <li class="tool"><img src="img/tool4.jpg" alt="adobe xd"></li>
           </ul>
-          <h5>B. coding</h4>
+          <h5>• Coding</h5>
           <ul class="coding">
             <li><img src="img/coding1.jpg" alt="html"></li>
             <li><img src="img/coding2.jpg" alt="css"></li>
@@ -95,43 +97,46 @@
       </div>
 
       <!-- 2. portfolio gallery & links -->
-      <div class="sectionPortfolio">
+      <div class="allSection sectionPortfolio">
         <header>
-          <h3>here are some of my works</h3>
+          <h3>Here are my works</h3>
         </header>
         <section>
           <div class="filterBtn"></div>
-          <div class="gallery">
-            <article>
-              <div class="image"></div>
-              <div class="texts"></div>
-            </article>
-            <article>
-              <div class="image"></div>
-              <div class="texts"></div>
-            </article>
-            <article>
-              <div class="image"></div>
-              <div class="texts"></div>
-            </article>
-            <article>
-              <div class="image"></div>
-              <div class="texts"></div>
-            </article>
-            <article>
-              <div class="image"></div>
-              <div class="texts"></div>
-            </article>
-            <article>
-              <div class="image"></div>
-              <div class="texts"></div>
-            </article>
+          <div class="galleryProjects">
+            <h4>Main Projects</h4>
           </div>
+          <!-- <div class="gallery">
+            <article>
+              <div class="image"></div>
+              <div class="texts"></div>
+            </article>
+            <article>
+              <div class="image"></div>
+              <div class="texts"></div>
+            </article>
+            <article>
+              <div class="image"></div>
+              <div class="texts"></div>
+            </article>
+            <article>
+              <div class="image"></div>
+              <div class="texts"></div>
+            </article>
+            <article>
+              <div class="image"></div>
+              <div class="texts"></div>
+            </article>
+            <article>
+              <div class="image"></div>
+              <div class="texts"></div>
+            </article>
+          </div> -->
         </section>
       </div>
 
       <!-- 3. contact -->
-      <!-- <div class="sectionContact">
+      <!-- <div class="all Section sectionContact">
         <header>
           <h3>you can reach out to me!</h3>
         </header>
