--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <!-- position on right -->
     <!-- 0. introduction -->
     <div class="container">
-      <div class="allSection sectionMain" id="0">
+      <!-- <div class="allSection sectionMain" id="0">
         <img src="https://via.placeholder.com/1130" alt="profile pic" />
-      </div>
+      </div> -->
 
       <div class="allSection sectionIntro" id="1">
         <header>
@@ -62,8 +62,9 @@
               There is still a long way for me to go to become a professional.
               But there's the saying "A good beginning is half the battle." I
               want start using my abilities to contribute to the company I work
-              in. Please check out my works, and contact me! Thank you.
+              in.
             </p>
+            <p>Please check out my works, and contact me! Thank you.</p>
           </div>
         </section>
       </div>
