--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <img src="https://via.placeholder.com/1130" alt="profile pic" />
       </div> -->
 
-      <div class="allSection sectionIntro" id="1">
+      <div class="allSection sectionIntro" id="0">
         <header>
           <h3>
             Hi, I'm Min Young Park.<br />
@@ -78,23 +78,27 @@
           <h5>Design tools</h5>
           <ul class="design">
             <li class="tool">
-              <img src="img/photoshop512.png" alt="photoshop" />
+              <img src="img/logos/photoshop512.png" alt="photoshop" />
             </li>
             <li class="tool">
-              <img src="img/illustrator512.png" alt="illustrator" />
+              <img src="img/logos/illustrator512.png" alt="illustrator" />
             </li>
-            <li class="tool"><img src="img/figma512.png" alt="figma" /></li>
-            <li class="tool"><img src="img/xd512.png" alt="adobe xd" /></li>
+            <li class="tool">
+              <img src="img/logos/figma512.png" alt="figma" />
+            </li>
+            <li class="tool">
+              <img src="img/logos/xd512.png" alt="adobe xd" />
+            </li>
           </ul>
           <h5>Coding</h5>
           <ul class="coding">
-            <li><img src="img/html512.png" alt="html" /></li>
-            <li><img src="img/css512.png" alt="css" /></li>
-            <li><img src="img/sass512.png" alt="sass/scss" /></li>
-            <li><img src="img/js512.png" alt="javascript" /></li>
-            <li><img src="img/jquery512.png" alt="jQuery" /></li>
-            <li><img src="img/react512.png" alt="react" /></li>
-            <li><img src="img/json512.png" alt="ajax/json" /></li>
+            <li><img src="img/logos/html512.png" alt="html" /></li>
+            <li><img src="img/logos/css512.png" alt="css" /></li>
+            <li><img src="img/logos/sass512.png" alt="sass/scss" /></li>
+            <li><img src="img/logos/js512.png" alt="javascript" /></li>
+            <li><img src="img/logos/jquery512.png" alt="jQuery" /></li>
+            <li><img src="img/logos/react512.png" alt="react" /></li>
+            <li><img src="img/logos/json512.png" alt="ajax/json" /></li>
           </ul>
         </section>
       </div>
@@ -111,48 +115,35 @@
             <ul>
               <li>
                 <a href="#"
-                  ><img src="https://via.placeholder.com/300" alt=""
+                  ><img src="img/projects/project1_apple.png" alt="apple"
                 /></a>
+                <div class="texts"></div>
               </li>
               <li>
                 <a href="#"
-                  ><img src="https://via.placeholder.com/300" alt=""
-                /></a>
-              </li>
-              <li>
-                <a href="#"
-                  ><img src="https://via.placeholder.com/300" alt=""
+                  ><img src="img/projects/project2_hyundai.png" alt="hyundai"
                 /></a>
               </li>
             </ul>
           </div>
-          <h4></h4>
-          <!-- <div class="gallery">
-            <article>
-              <div class="image"></div>
-              <div class="texts"></div>
-            </article>
-            <article>
-              <div class="image"></div>
-              <div class="texts"></div>
-            </article>
-            <article>
-              <div class="image"></div>
-              <div class="texts"></div>
-            </article>
-            <article>
-              <div class="image"></div>
-              <div class="texts"></div>
-            </article>
-            <article>
-              <div class="image"></div>
-              <div class="texts"></div>
-            </article>
-            <article>
-              <div class="image"></div>
-              <div class="texts"></div>
-            </article>
-          </div> -->
+          <h4>Cloning Site</h4>
+          <div class="galleryProjects">
+            <ul>
+              <li>
+                <a href="#"
+                  ><img
+                    src="img/projects/project_linefriends.png"
+                    alt="line friends"
+                /></a>
+                <div class="texts"></div>
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="img/works/respon_pf1.png" alt="bingrae"
+                /></a>
+              </li>
+            </ul>
+          </div>
         </section>
       </div>
 
