--- a/landing.html
+++ b/landing.html
@@ -8,9 +8,20 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <div id="landing">
-      <img src="img/box.gif" alt="lang select" />
-      <p>Text Some Here</p>
+    <div id="flip">
+      <div class="letters">
+        <p id="p1">W</p>
+        <p id="p2">E</p>
+        <p id="p3">L</p>
+        <p id="p4">C</p>
+        <p id="p5">O</p>
+        <p id="p6">M</p>
+        <p id="p7">E</p>
+      </div>
+      <div class="start">
+        <button id="langEN">Eng</button>
+        <button id="langKR">한국어</button>
+      </div>
     </div>
   </body>
 </html>
