--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="hdrWrap">
       <header>
         <h1 class="logo">
-          <a href="#0"> home </a>
+          <a href="landing.html"> home </a>
         </h1>
         <!-- <div class="emptyBox"></div> -->
       </header>
